--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-asset": "^2.1.1",
     "react-native-drop-shadow": "^1.0.0",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-navigation": "^7.37.2",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-shadow-2": "^7.0.8"
